[gd_scene load_steps=9 format=3 uid="uid://cu0r8a4gefs2g"]

[ext_resource type="Script" uid="uid://bxxmump2g3igw" path="res://objects/interactives/power_box.gd" id="1_8wvdj"]
[ext_resource type="PackedScene" uid="uid://dlti4wcnd21nj" path="res://arts/3D/models/polyhaven.com/power_box_01_2k.gltf/power_box_01_2k.gltf" id="3_bi40a"]
[ext_resource type="AudioStream" uid="uid://m433a6ermx52" path="res://arts/audio/sounds/kenney.nl/kenney_rpg-audio/Audio/creak3.ogg" id="5_ljrd3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_bi40a"]
size = Vector3(2, 2, 1.604)

[sub_resource type="Animation" id="Animation_15oo7"]
length = 0.001
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerBox/power_box_01_door")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_1r57l"]
resource_name = "closed"
length = 0.5
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerBox/power_box_01_door")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_o80dm"]
resource_name = "open"
length = 0.5
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PowerBox/power_box_01_door")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 0, 1, 0.5, 1, 0, -1, 0, 0)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1r57l"]
_data = {
&"RESET": SubResource("Animation_15oo7"),
&"closed": SubResource("Animation_1r57l"),
&"open": SubResource("Animation_o80dm")
}

[node name="PowerBox" type="Area3D"]
script = ExtResource("1_8wvdj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.697998)
shape = SubResource("BoxShape3D_bi40a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1r57l")
}
autoplay = "closed"

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_ljrd3")

[node name="PowerBox" parent="." instance=ExtResource("3_bi40a")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)

[node name="power_box_01_door" parent="PowerBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16382971, 4.9956143e-06, 0.043181043)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]

[editable path="PowerBox"]
